--- a/Documentación/bibliography.bib
+++ b/Documentación/bibliography.bib
@@ -177,10 +177,18 @@ url = {https://docs.python.org/3/library/sqlite3.html},
 urldate = {2021-01-06}
 }
 
-@onlin3{filtros:2020,
+@online{filtros:2020,
 author = {Jose Angel Garcia Garcia},
 title = {Filtros de Modelos},
 year = {2020},
 url = {https://docs.google.com/spreadsheets/d/1z7BNBZoBWgpI1OsBOl8HLMe40YfQDvHNvH_RnVEIkSI/edit?usp=sharing},
 urldate = {2021-01-18}
+}
+
+@online{git:2020,
+	author = {Jose Angel Garcia Garcia},
+	title = {GitHub Repository: Simulacion},
+	year = {2020},
+	url = {https://github.com/ChepeAicrag12/Simulacion},
+	urldate = {2021-01-18}
 }
